# mantra-lang

./: .gitignore  ANALYSIS_COMPLETE.md  ANALYSIS_INDEX.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  AUDIT_COMPLETION_REPORT.md  AUDIT_REPORT.md  AUDIT_SUMMARY_HI.md  BENCHMARK_COMPARISON.md  CMakeLists.txt  COMPATIBILITY_NOTES.md  CONSOLIDATION_INDEX.md  CONSOLIDATION_REPORT.md  CONSOLIDATION_SUMMARY.md  CURRENT_STATE_REPORT.md  EXECUTIVE_SUMMARY.md  FINAL_EXECUTIVE_SUMMARY.md  FINAL_VERIFICATION.txt  IMPLEMENTATION_PLAN.md  LICENSE  NEXT_STRATEGIC_ROADMAP.md  PRODUCTION_READINESS.md  README.md  README_AUDIT.md  cleanup.sh  main.cpp  mantra.tmLanguage.json  server_test.mtr  test.mtr
.github/workflows/: build.yml
bytecode/: chunk.cpp  chunk.h  opcode.h
compiler/: compiler.cpp  compiler.h
core/: ast.h  async_system.cpp  async_system.h  ind_package_manager.cpp  ind_package_manager.h  interpreter.cpp  interpreter.h  keyword_normalizer.cpp  keyword_normalizer.h  lexer.cpp  lexer.h  module_system.cpp  module_system.h  parser.cpp  parser.h  repl.cpp  repl.h  token.h  token_class.h  typesystem.cpp  typesystem.h
docs/: AMBIGUITY_RESOLUTION.md  AST_DIAGRAMS.md  DEVELOPERS_GUIDE.md  GRAMMAR.ebnf  IMPLEMENTATION_REPORT.md  PARSER_DESIGN.md  ROADMAP_NEXT_PHASE.md  SESSION_SUMMARY.md  SYNTAX_MIGRATION.md  TOKEN_STRATEGY.md  TYPE_SYSTEM.md
error/: error.cpp  error.h
examples/: all_languages.mtr  async_example.mtr  calculator.mtr  conditions.mtr  functions.mtr  loop.mtr  namaste.mtr  testing_example.mtr  web_example.mtr
examples/website/: index.mtr
include/mantra/: parser.h
include/mantra/core/: types.h
include/mantra/runtime/: runtime.h  types.h
include/mantra/vm/: bytecode.h  stack.h  value.h  vm.h
semantic/: semantic_analyzer.cpp  semantic_analyzer.h
src/parser/: parser.cpp
src/runtime/: runtime.cpp  types.cpp
src/vm/: bytecode.cpp  stack.cpp  value.cpp  vm.cpp
stdlib/: ai.cpp  ai.h  app.cpp  app.h  audio.cpp  audio.h  base64.cpp  base64.h  browser.cpp  browser.h  chart.cpp  chart.h  compiler.cpp  compiler.h  compress.cpp  compress.h  config.cpp  config.h  crypto.cpp  crypto.h  csv.cpp  csv.h  datetime.cpp  datetime.h  email.cpp  email.h  file.cpp  file.h  gui.cpp  gui.h  hacking.cpp  hacking.h  hash.cpp  hash.h  http.cpp  http.h  image.cpp  image.h  ini.cpp  ini.h  (+44 more)
tests/: run_all_tests.mtr  test_async.mtr  test_http.mtr  test_ind.mtr  test_json.mtr  test_keyword_normalizer.cpp  test_lexer.cpp  test_module.mtr  test_runner.h  test_semantic.cpp  test_server.mtr  test_stdlib_math.cpp  test_testing.mtr  test_typesystem.cpp  test_vm.cpp  test_vm.mtr  test_web.mtr
tools/ind/: ARCHITECTURE.md  COMPLETION_REPORT.md  INSTALL.md  README.md  ind.py  package.mtr  test_ind.py
unicode/: script_detect.cpp  script_detect.h  unicode.cpp  unicode.h
vm/: vm.cpp  vm.h
wasm/: README.md  build.sh  ide.html  mantra_wasm.cpp  mantra_wasm.js
web/: html_generator.cpp  html_generator.h  mtr_parser.cpp  mtr_parser.h
